<resources>
    <string name="app_name">RMIAndroidClient</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="add_toy">Add Toy</string>
    <string name="toys">Toys</string>
    <string name="view_toys">View Toys</string>
    <string name="delete_toy">Delete Toy</string>
    <string name="update_toy">Update Toy</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="toy_name">Toy Name</string>
    <string name="toy_price">Toy Price</string>

    <string name="add_toy_price">Add Toy Price</string>
    <string name="delete_toy_price">Delete Toy Price</string>
    <string name="update_toy_price">Update Toy Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>