<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment android:id="@+id/LoginFragment"
        android:name="com.example.toyenginermi.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
    </fragment>
    <fragment android:id="@+id/SignUpFragment"
        android:name="com.example.toyenginermi.SignUpFragment"
        tools:layout="@layout/fragment_sign_up"
        android:label="@string/signup">
    </fragment>
    <fragment android:id="@+id/ViewToysFragment"
        android:name="com.example.toyenginermi.ViewToysFragment"
        tools:layout="@layout/fragment_view_toys"
        android:label="@string/toys">
    </fragment>
    <fragment>

    </fragment>
</navigation>