<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateToyFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/updatePriceNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toy_name"
        android:textSize="15sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/updatePriceNameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/toy_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="text|numberDecimal"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/updatePricePriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toy_price"
        android:textSize="15sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/updatePricePriceInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/toy_price"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="text|numberDecimal"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnUpdateToyPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:text="@string/update_toy_price"/>

</LinearLayout>